pkg/ibmvpc/examples/out/explain_out/NACLInternal4_all_vpcs_explain_detail.txt
Explaining connectivity from vsi3b-ky to vsi3a-ky within test-vpc1-ky
Interpreted source: vsi3b-ky[10.240.30.6]
Interpreted destination: vsi3a-ky[10.240.30.5]
=====================================================================

Connections from vsi3b-ky[10.240.30.6] to vsi3a-ky[10.240.30.5]: All Connections

Path:
	vsi3b-ky[10.240.30.6] -> security group sg1-ky -> 
	security group sg1-ky -> vsi3a-ky[10.240.30.5]


Details:
~~~~~~~~
Path is enabled; The relevant rules are:
	Egress:
		security group sg1-ky allows connection with the following allow rules
			index: 0, direction: outbound,  conns: protocol: all, remote: 0.0.0.0/0, local: 0.0.0.0/0

	Ingress:
		security group sg1-ky allows connection with the following allow rules
			index: 1, direction: inbound,  conns: protocol: all, remote: 0.0.0.0/0, local: 0.0.0.0/0

------------------------------------------------------------------------------------------------------------------------
